--- a/LogRegression.ipynb
+++ b/LogRegression.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "\n",
     "\n",
-    "# Load dataset (50k sample for speed\n",
+    "# Load dataset\n",
     "\n",
     "df = pd.read_csv(\n",
     "    \"test_dataset.csv\",\n",
@@ -114,9 +114,7 @@
     "    random_state=42\n",
     ")\n",
     "\n",
-    "# -----------------------------\n",
-    "# Train Logistic Regression baseline\n",
-    "# -----------------------------\n",
+    "# Logistic regression model\n",
     "model = LogisticRegression(\n",
     "    max_iter=500,\n",
     "    class_weight=\"balanced\",\n",
@@ -126,9 +124,7 @@
     "\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# -----------------------------\n",
-    "# Evaluate model\n",
-    "# -----------------------------\n",
+    "# Evaluate model/n",
     "preds = model.predict(X_test)\n",
     "\n",
     "print(\"\\n=== CLASSIFICATION REPORT ===\")\n",
